# cardio-sonix-website

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  ⭐️_Home.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: __init__.py  variables.py  ⭐️_Home.py
app-scripts/: server.py
app/pages/: 1_🧪_Tutorial.py  2_🩺_Diagnostics.py
app/theme/: light-theme.toml
assets/data/: clinical-records.csv  heartbeat-sound.csv  heartbeat.csv
pages/: 0_💊_Health.py  1_🔬_Dashboard.py  1_🔬_Research.py  1_🧪_Tutorial.py  2_🧪_Tutorial.py  2_🩺_Diagnostics.py  3_🩺_Diagnostics.py
pipeline/: __init__.py  sessions.py
pipeline/preprocessing/: __init__.py  audio.py  tabular.py
preprocessors/: Normalizer.joblib  OneHotEncoder.joblib
sonixhub/architect/: baseline.py  utils.py
sonixhub/prod/: baseline.py  wrapper.py
sonixhub/transforms/: __init__.py  audio.py  extractors.py  pipeline.py  preprocessing.py  tabular.py
src/theme/: dark-theme.toml
utils/: __init__.py  converter.py  datamarts.py  extra_form.py  recorder.py  variables.py
utils/audio/: recorder.py
utils/forms/: __init__.py  extra_form.py
utils/widgets/: __init__.py  datamarts.py
