[tool.poetry]
name = "cardio-sonix-website"
version = "0.1.0"
description = ""
authors = ["YeaMerci <113313229+YeaMerci@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
requests = "^2.31.0"
plotly = "^5.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
